--- a/css/reveal.css
+++ b/css/reveal.css
@@ -532,7 +532,7 @@ body {
 
 	overflow: visible;
 	z-index: 1;
-	text-align: center;
+	text-align: left;
 
 	-webkit-transition: -webkit-perspective .4s ease;
 	   -moz-transition: -moz-perspective .4s ease;
@@ -565,6 +565,7 @@ body {
 	z-index: 10;
 	line-height: 1.2em;
 	font-weight: inherit;
+
 
 	-webkit-transform-style: preserve-3d;
 	   -moz-transform-style: preserve-3d;
@@ -1219,7 +1220,7 @@ body {
 	top: 0;
 	left: 50%;
 	margin: 0;
-	text-align: center;
+	text-align: left;
 }
 
 .no-transforms .reveal .controls,
